[package]
name = "p2pserver"
version = "0.12.6"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2021"
repository = "https://github.com/libp2p/rust-libp2p"
rust-version = { workspace = true }
description = "A rust-libp2p server binary."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
clap = { version = "4.4.16", features = ["derive"] }
futures = "0.3"
futures-timer = "3"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
libp2p = { workspace = true, features = ["gossipsub", "request-response", "dcutr", "mdns", "autonat", "dns", "tokio", "noise", "tcp", "yamux", "identify", "kad", "ping", "relay", "metrics", "rsa", "macros", "quic", "websocket"] }
prometheus-client = { workspace = true }
serde = "1.0.196"
serde_derive = "1.0.125"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = "1"
thiserror = "1.0"
#ed25519-dalek = "2.1.1"
#rand = "0.8.5"
#pem = "3.0.2"
#pkcs8 = { version = "0.10.2", features = ["pem", "encryption", "pkcs5"] }
#pbkdf2 = "0.12.2"
sysinfo = "0.30.6"
systemstat = "0.2.3"
openssl = {  version = "0.10.64", features = ["vendored"] }
toml = "0.8.10"
async-trait = "0.1"
chrono = "0.4.35"
unsigned-varint = { version = "0.7", features = [
    "futures",
    "asynchronous_codec",
] }

[lints]
workspace = true
